# llm-based-audit-agent-app

./: .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt  synthetic_data.py
backend/.init-scripts/: 01-extentions.sql  02-setupdb.sh
backend/agents/: audit_agent.py  graph.py  ocr_agent.py  run.py  validation_agent.py
backend/alembic/: env.py
backend/alembic/versions/: b3f1a2c9d4e5_add_audit_columns.py  ce0603277109_initial_tables.py
backend/core/: config.py
backend/database/: session.py
backend/models/: invoice.py
backend/routers/: invoice.py
backend/schemas/: invoices.py
backend/utils/: duplicate_checker.py  files.py  policy.py  policy_rag.py  secrets_manager.py
frontend/: Dockerfile  pyproject.toml  streamlit_app.py
