[project]
name = "audit-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "boto3>=1.43.36",
    "fastapi[standard]>=0.138.0",
    "jose>=1.0.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langchain[openai]>=1.3.10",
    "langgraph>=1.2.6",
    "pandas>=3.0.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pwdlib>=0.3.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "pymupdf>=1.27.2.3",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.18",
    "reportlab>=5.0.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
